--- a/.github/workflows/wheel.yml
+++ b/.github/workflows/wheel.yml
@@ -10,7 +10,7 @@ jobs:
       fail-fast: true
       matrix:
         os: [windows-latest]
-        python-version: [3.8] #[3.5, 3.6, 3.7, 3.8]
+        python-version: [3.5, 3.6, 3.7, 3.8]
         python-arch: [x64, x86]
         boost-version: [1_72_0]
         include:
