--- a/.travis.yml
+++ b/.travis.yml
@@ -1,27 +1,19 @@
-language: python
 os: osx
-osx_image: xcode6.4
+osx_image: xcode8.3
 
 git:
   depth: 1
 
-jobs:
-  include:
-    - python: "3.5"
-      env: NUMPY_VERSION=1.10.4
-    - python: "3.6"
-      env: NUMPY_VERSION=1.12.0
-    - python: "3.7"
-      env: NUMPY_VERSION=1.14.5
-    - python: "3.8"
-      env: NUMPY_VERSION=1.17.3
-
 env:
   global:
-    - MACOSX_DEPLOYMENT_TARGET=10.9
-    - SDKROOT=/Applications/Xcode.app/Contents/Developer/Platforms/MacOSX.platform/Developer/SDKs/MacOSX10.9.sdk
     - BOOST_VERSION=1_72_0
     - BOOST_VERSION_DOTS=1.72.0
+
+  jobs:
+    - PYTHON_VERSION=3.5.4 PY_MACOS_VERSION=10.6 NUMPY_VERSION=1.10.4
+    - PYTHON_VERSION=3.6.8 PY_MACOS_VERSION=10.6 NUMPY_VERSION=1.12.0
+    - PYTHON_VERSION=3.7.6 PY_MACOS_VERSION=10.9 NUMPY_VERSION=1.14.5
+    - PYTHON_VERSION=3.8.1 PY_MACOS_VERSION=10.9 NUMPY_VERSION=1.17.3
 
 addons:
   homebrew:
@@ -29,14 +21,18 @@ addons:
       - swig
 
 install:
-  - python -m pip install --upgrade pip
-  - python -m pip install --upgrade setuptools wheel
-  - python -m pip install numpy==$NUMPY_VERSION
+  - curl -L -o python.pkg https://www.python.org/ftp/python/$PYTHON_VERSION/python-$PYTHON_VERSION-macosx$PY_MACOS_VERSION.pkg
+  - sudo installer -pkg python.pkg -target /
+
+  - python3 -m pip install --upgrade pip
+  - python3 -m pip install --upgrade setuptools wheel
+  - python3 -m pip install numpy==$NUMPY_VERSION
+
   - curl -LO https://dl.bintray.com/boostorg/release/$BOOST_VERSION_DOTS/source/boost_$BOOST_VERSION.tar.gz
   - tar xzf boost_$BOOST_VERSION.tar.gz
-  - cd boost_$BOOST_VERSION && ./bootstrap.sh && ./b2 --with-system --with-thread --with-date_time link=static threading=multi architecture=x86 address-model=32_64
+  - cd boost_$BOOST_VERSION && ./bootstrap.sh && ./b2 --with-system --with-thread --with-date_time link=static threading=multi architecture=x86 address-model=64
 
 script:
-  - python setup.py build_ext -I./boost_$BOOST_VERSION -L./boost_$BOOST_VERSION/stage/lib
-  - python setup.py build
-  - python setup.py bdist_wheel
+  - python3 setup.py build_ext -I./boost_$BOOST_VERSION -L./boost_$BOOST_VERSION/stage/lib
+  - python3 setup.py build
+  - python3 setup.py bdist_wheel
