--- a/.travis.yml
+++ b/.travis.yml
@@ -25,9 +25,9 @@ install:
   - sudo installer -pkg python.pkg -target /
   - python3 --version
 
-  - python3 -m pip install --index-url=https://pypi.python.org/simple/ --upgrade pip
-  - python3 -m pip install --index-url=https://pypi.python.org/simple/ --upgrade setuptools wheel
-  - python3 -m pip install --index-url=https://pypi.python.org/simple/ numpy==$NUMPY_VERSION
+  - python3 -m pip install --index-url=https://pypi.org/simple/ --upgrade pip
+  - python3 -m pip install --index-url=https://pypi.org/simple/ --upgrade setuptools wheel
+  - python3 -m pip install --index-url=https://pypi.org/simple/ numpy==$NUMPY_VERSION
 
   - curl -LO https://dl.bintray.com/boostorg/release/$BOOST_VERSION_DOTS/source/boost_$BOOST_VERSION.tar.gz
   - tar xzf boost_$BOOST_VERSION.tar.gz
