--- a/.github/workflows/wheel.yml
+++ b/.github/workflows/wheel.yml
@@ -55,22 +55,14 @@ jobs:
           git submodule sync --recursive
           git submodule update --init --force --recursive --depth=1
 
-      - name: Install Python
+      - name: Install Python (generic)
         uses: actions/setup-python@v1
         if: matrix.os != 'macOS'
         with:
           python-version: ${{ matrix.python-version }}
           architecture: ${{ matrix.python-arch }}
 
-      - name: Set up venv
-        if: matrix.os == 'Windows'
-        shell: cmd
-        run: |
-          python -m venv venv
-
-      # Note: We would need to set up a venv if we add Linux
-
-      - name: Install Python
+      - name: Install Python (macOS)
         if: matrix.os == 'macOS'
         run: |
           # Install Python.org Python
@@ -78,26 +70,24 @@ jobs:
           sudo installer -pkg python-${{ matrix.mac-python-version }}-macosx${{ matrix.macos-version }}.pkg -target /
           /Library/Frameworks/Python.framework/Versions/${{ matrix.python-version }}/bin/python3 -m venv venv
 
-      - name: Install tools
+      - name: Install tools (Windows)
         if: matrix.os == 'Windows'
         run: |
           choco install -y swig --version 4.0.1
 
-      - name: Install tools
+      - name: Install tools (macOS)
         if: matrix.os == 'macOS'
         run: |
           brew install swig
 
-      - name: Install dependencies
+      - name: Install dependencies (Windows)
         if: matrix.os == 'Windows'
-        shell: cmd
         run: |
-          venv\Scripts\activate
           python -m pip install --upgrade pip
           python -m pip install --upgrade setuptools wheel
           python -m pip install numpy==${{ matrix.numpy-version }}
 
-      - name: Install dependencies
+      - name: Install dependencies (Unix)
         if: matrix.os != 'Windows'
         run: |
           source venv/bin/activate
@@ -105,7 +95,7 @@ jobs:
           python -m pip install --upgrade setuptools wheel
           python -m pip install numpy==${{ matrix.numpy-version }}
 
-      - name: Build Boost
+      - name: Build Boost (Windows)
         if: matrix.os == 'Windows'
         shell: cmd
         # At least some versions of vcvarsall.bat fail when run with the
@@ -117,7 +107,7 @@ jobs:
           call bootstrap.bat
           b2 --with-system --with-thread --with-date_time link=static runtime-link=shared toolset=msvc-14.0
 
-      - name: Build Boost
+      - name: Build Boost (macOS)
         if: matrix.os == 'macOS'
         run: |
           BOOST_VER=${{ matrix.boost-version }}
@@ -128,7 +118,7 @@ jobs:
           ./bootstrap.sh
           ./b2 --with-system --with-thread --with-date_time link=static architecture=x86 address-model=64
 
-      - name: Build wheel
+      - name: Build wheel (Windows)
         if: matrix.os == 'Windows'
         shell: cmd
         env:
@@ -136,7 +126,6 @@ jobs:
           DISTUTILS_USE_SDK: 1
           PY_VCRUNTIME_REDIST: 1
         run: |
-          venv\Scripts\activate
           pushd "%VCVARSALL_DIR%"
           call vcvarsall.bat ${{ matrix.msvc-arch }} -vcvars_ver=14.0
           popd
@@ -144,7 +133,7 @@ jobs:
           python setup.py build
           python setup.py bdist_wheel
 
-      - name: Build wheel
+      - name: Build wheel (macOS)
         if: matrix.os == 'macOS'
         env:
           BOOST_ROOT: ./boost_${{ matrix.boost-version }}
@@ -157,7 +146,7 @@ jobs:
           python setup.py build
           python setup.py bdist_wheel
 
-      - name: Log undefined symbols
+      - name: Log undefined symbols (macOS)
         if: matrix.os == 'macOS'
         run: |
           PYMOD=$(echo build/lib.*/_pymmcore.*.so)
