--- a/.github/workflows/win-mac.yml
+++ b/.github/workflows/win-mac.yml
@@ -112,7 +112,9 @@ jobs:
         run: |
           BOOST_VER=${{ matrix.boost-version }}
           BOOST_TGZ=boost_$BOOST_VER.tar.gz
-          curl -LO https://dl.bintray.com/boostorg/release/${BOOST_VER//_/.}/source/$BOOST_TGZ
+          curl -fLO https://dl.bintray.com/boostorg/release/${BOOST_VER//_/.}/source/$BOOST_TGZ || \
+              curl -fLO https://astuteinternet.dl.sourceforge.net/project/boost/boost/${BOOST_VER//_/.}/$BOOST_TGZ
+          shasum -a 256 -c boost-sha256.txt
           tar xzf $BOOST_TGZ
           cd boost_$BOOST_VER
           ./bootstrap.sh
