Fail build when missing symbols detected
It turns out that the shell '!' overrides the effect of 'set -e', so the
previous code would continue when grep result is nonempty.

--- a/.github/workflows/ubuntu.yml
+++ b/.github/workflows/ubuntu.yml
@@ -47,8 +47,7 @@ jobs:
       - name: Check for undefined symbols
         run: |
           echo 'Missing symbols:'
-          # Fail unless empty
-          ! ldd -r build/lib.*/_pymmcore.*.so |grep '^undefined symbol:' |grep -v Py
+          ldd -r build/lib.*/_pymmcore.*.so |grep '^undefined symbol:' |grep -v Py && exit 1
           echo '-- end of missing symbols --'
 
       - name: Sanity check
