Fix upload of win-mac wheels

--- a/.github/workflows/win-mac.yml
+++ b/.github/workflows/win-mac.yml
@@ -200,4 +200,4 @@ jobs:
       - uses: actions/upload-artifact@v1
         with:
           name: pymmcore-wheels-win-mac
-          path: dist
+          path: tmp/pymmcore/dist
