Fix development status classifier

--- a/setup.cfg
+++ b/setup.cfg
@@ -8,7 +8,7 @@ description = Python bindings for MMCore, Micro-Manager's device control layer
 long_description = file: README.md
 long_description_content_type = text/markdown
 classifiers =
-    Development Status :: 2 - Pre-Alpha
+    Development Status :: 5 - Production/Stable
     Intended Audience :: Science/Research
     License :: OSI Approved :: GNU Lesser General Public License v2 (LGPLv2)
     Operating System :: MacOS :: MacOS X
