--- a/.github/workflows/win-mac.yml
+++ b/.github/workflows/win-mac.yml
@@ -9,15 +9,16 @@ jobs:
       fail-fast: true
       matrix:
         # os: [Windows, macOS]
+        os: [macOS]
         python-version: [3.9]
         python-arch: [x64, x86]
         boost-version: [1_72_0]
         macos-version: [10.9]
-        include:
+        # include:
           # - os: Windows
           #   runner: windows-latest
-          - os: macOS
-            runner: macOS-latest
+          # - os: macOS
+          #   runner: macOS-latest
           # - python-version: 3.5
           #   numpy-version: 1.10.4
           # - python-version: 3.6
@@ -33,11 +34,11 @@ jobs:
           #   msvc-arch: amd64
           # - python-arch: x86
           #   msvc-arch: x86
-        exclude:
-          - os: macOS
-            python-arch: x86
-          - os: macOS
-            python-version: 3.5
+        # exclude:
+        #   - os: macOS
+        #     python-arch: x86
+        #   - os: macOS
+        #     python-version: 3.5
 
     name: ${{ matrix.os }} Python ${{ matrix.python-version }} ${{ matrix.python-arch }}
 
