--- a/.github/workflows/win-mac.yml
+++ b/.github/workflows/win-mac.yml
@@ -14,11 +14,11 @@ jobs:
         python-arch: [x64, x86]
         boost-version: [1_72_0]
         macos-version: [10.9]
-        # include:
+        include:
           # - os: Windows
           #   runner: windows-latest
-          # - os: macOS
-          #   runner: macOS-latest
+          - os: macOS
+            runner: macOS-latest
           # - python-version: 3.5
           #   numpy-version: 1.10.4
           # - python-version: 3.6
