--- a/.github/workflows/win-mac.yml
+++ b/.github/workflows/win-mac.yml
@@ -11,7 +11,7 @@ jobs:
         # os: [Windows, macOS]
         os: [macOS]
         python-version: [3.9]
-        python-arch: [x64, x86]
+        python-arch: [x64]
         boost-version: [1_72_0]
         macos-version: [10.9]
         include:
