--- a/.github/workflows/win-mac.yml
+++ b/.github/workflows/win-mac.yml
@@ -9,16 +9,14 @@ jobs:
       fail-fast: true
       matrix:
         # os: [Windows, macOS]
-        os: [macOS]
+        runner: [macos-latest]
         python-version: [3.9]
         python-arch: [x64]
         boost-version: [1_72_0]
         macos-version: [10.9]
-        include:
+        # include:
           # - os: Windows
           #   runner: windows-latest
-          - os: macOS
-            runner: macOS-latest
           # - python-version: 3.5
           #   numpy-version: 1.10.4
           # - python-version: 3.6
