--- a/.github/workflows/win-mac.yml
+++ b/.github/workflows/win-mac.yml
@@ -8,7 +8,7 @@ jobs:
     strategy:
       fail-fast: true
       matrix:
-        # os: [Windows, macOS]
+        os: [macOS]
         runner: [macos-latest]
         python-version: [3.9]
         python-arch: [x64]
