Ensure version numbers in YAML are strings
For consistency, since quotes are necessary when the version number is
X.0 (or else it will be interpreted as the integer X).

--- a/.github/workflows/manylinux.yml
+++ b/.github/workflows/manylinux.yml
@@ -7,9 +7,9 @@ jobs:
     strategy:
       fail-fast: true
       matrix:
-        manylinux-version: [2010] # 2014 should be added when auditwheel fixed
+        manylinux-version: ['2010'] # 2014 should be added when auditwheel fixed
         arch: [i686, x86_64]
-        boost-version: [1_72_0]
+        boost-version: ['1_72_0']
 
     name: manylinux${{ matrix.manylinux-version }}_${{ matrix.arch }}
 
