--- a/.github/workflows/win-mac.yml
+++ b/.github/workflows/win-mac.yml
@@ -8,28 +8,28 @@ jobs:
       fail-fast: true
       matrix:
         os: [Windows, macOS]
-        python-version: [3.5, 3.6, 3.7, 3.8, 3.9]
+        python-version: ['3.5', '3.6', '3.7', '3.8', '3.9']
         python-arch: [x64, x86]
-        boost-version: [1_72_0]
-        macos-version: [10.9]
+        boost-version: ['1_72_0']
+        macos-version: ['10.9']
         msvc-version: ['14.0'] # VS2015
         include:
           - os: Windows
             runner: windows-latest
           - os: macOS
             runner: macOS-latest
-          - python-version: 3.5
+          - python-version: '3.5'
             numpy-version: 1.10.4
-          - python-version: 3.6
+          - python-version: '3.6'
             mac-python-version: 3.6.7
             numpy-version: 1.12.0
-          - python-version: 3.7
+          - python-version: '3.7'
             mac-python-version: 3.7.7
             numpy-version: 1.14.5
-          - python-version: 3.8
+          - python-version: '3.8'
             mac-python-version: 3.8.2
             numpy-version: 1.17.3
-          - python-version: 3.9
+          - python-version: '3.9'
             mac-python-version: 3.9.1
             numpy-version: 1.19.3
           - python-arch: x64
@@ -40,7 +40,7 @@ jobs:
           - os: macOS
             python-arch: x86
           - os: macOS
-            python-version: 3.5
+            python-version: '3.5'
 
     name: ${{ matrix.os }} Python ${{ matrix.python-version }} ${{ matrix.python-arch }}
 
