--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = pymmcore
-version = 10.1.1.69.0dev
+version = 10.1.1.69.0
 author = Micro-Manager Team
 author_email = info@micro-manager.org
 url = https://github.com/micro-manager/pymmcore
