Switch submodule micro-manager -> mmCoreAndDevices
This also picks up the recent changes to MMCorePy.i (exception types),
but does not change the MMCore or MMDevice version.

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,4 @@
-[submodule "micro-manager"]
-	path = micro-manager
-	url = https://github.com/micro-manager/micro-manager.git
+[submodule "mmCoreAndDevices"]
+	path = mmCoreAndDevices
+	url = https://github.com/micro-manager/mmCoreAndDevices.git
+	branch = main
