--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,4 +1,4 @@
-recursive-include micro-manager/MMDevice *.h *.cpp
-recursive-include micro-manager/MMCore *.h *.cpp
-prune micro-manager/MMDevice/unittest
-prune micro-manager/MMCore/unittest
+recursive-include mmCoreAndDevices/MMDevice *.h *.cpp
+recursive-include mmCoreAndDevices/MMCore *.h *.cpp
+prune mmCoreAndDevices/MMDevice/unittest
+prune mmCoreAndDevices/MMCore/unittest
