--- a/.gitignore
+++ b/.gitignore
@@ -6,10 +6,14 @@ venv/
 build/
 dist/
 *.pdb
+*.py[cod]
 
 wheelhouse/
 
 pymmcore/pymmcore_swig_wrap.h
 pymmcore/pymmcore_swig_wrap.cpp
+pymmcore/_pymmcore_swig.cpython*
 pymmcore/pymmcore_swig.py
 pymmcore.egg-info
+.mypy_cache/
+
