--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -3,6 +3,39 @@ name: Build and publish
 on: [push, pull_request]
 
 jobs:
+  upload:
+    name: Upload to PyPI
+    runs-on: ubuntu-latest
+    needs: [sdist, wheels-manylinux, wheels-winmac]
+    steps:
+      - name: Download wheels and sdist
+        uses: actions/download-artifact@v2
+
+      - name: Collect wheels and sdist
+        run: |
+          mkdir dist
+          mv pymmcore-sdist/* dist/
+          mv pymmcore-wheels-manylinux/* dist/
+          mv pymmcore-wheels-win-mac/* dist/
+          ls dist
+
+      - name: Upload to TestPyPI
+        uses: pypa/gh-action-pypi-publish@release/v1
+        if: github.event_name == 'push'
+        with:
+          user: __token__
+          password: ${{ secrets.TEST_PYPI_API_TOKEN }}
+          repository_url: https://test.pypi.org/legacy/
+          skip_existing: true
+
+      - name: Upload release to PyPI
+        uses: pypa/gh-action-pypi-publish@release/v1
+        if: github.event_name == 'push' && startsWith(github.ref, 'refs/tags/v')
+        with:
+          user: __token__
+          password: ${{ secrets.PYPI_API_TOKEN }}
+
+
   sdist:
     name: sdist
     runs-on: ubuntu-latest
