Skip uploading when building in forks

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -5,6 +5,7 @@ on: [push, pull_request]
 jobs:
   upload:
     name: Upload to PyPI
+    if: github.repository == 'micro-manager/pymmcore'
     runs-on: ubuntu-latest
     needs: [sdist, wheels-manylinux, wheels-winmac]
     steps:
