Exclude 32-bit Windows build for Python 3.10
NumPy does not provide wheels for 32-bit Windows for cp310, so let us
also drop support.

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -144,6 +144,9 @@ jobs:
         exclude:
           - os: macOS
             python-arch: x86
+          - os: Windows  # NumPy has 64-bit only for Windows wheels >= cp310
+            python-version: '3.10'
+            python-arch: x86
 
     name: ${{ matrix.os }} Python ${{ matrix.python-version }} ${{ matrix.python-arch }}
 
